samples/_failures_safe/1761171144_706768_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_511049a0.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_511049a0.c:147:17: error: expected declaration or statement at end of input
  147 |                 }
      |                 ^
./samples/SAFE/__tmp_511049a0.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_511049a0.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_511049a0.c:147:17: error: expected declaration or statement at end of input
